@@ -52,6 +52,7 @@ ZMK.modules = \
 	Directory \
 	GitVersion \
 	Header \
+	HeaderGroup \
 	InstallUninstall \
 	Library.A \
 	Library.DyLib \
